fix icon alignment

--- a/style.css
+++ b/style.css
@@ -86,5 +86,10 @@ li.label-keyword {
 }
 
 .icon {
+  font-size: 1.5em;
   display: table-cell;
+}
+
+.resume-heading {
+  color: #AA6C39;
 }
